# cyberprotect

./: ANSWERS.md  CMakeLists.txt  README.md  ui.cpp
include/: machine.hpp
old/: CMakeLists.txt
src/: machine.cpp
tests/: test_run.cpp
