CMake_minimum_required(VERSION 3.13)
project(figure_detect)
enable_testing()
add_executable(ui ui.cpp)
add_library(machine src/machine.cpp)
target_include_directories(machine PUBLIC "include")
target_link_libraries(ui machine)
add_executable(test_run tests/test_run.cpp)
target_link_libraries(test_run machine)
add_test(NAME Test_run COMMAND test_run)